# pants_backend_clojure

./: .gitignore  CONTRIBUTING.md  README.md  pants.toml  pyproject.toml
.claude/skills/update-release-version/: SKILL.md
.github/workflows/: ci.yaml  create-draft-release.yaml  publish.yaml
docs/: THIRD_PARTY_DEPENDENCIES.md  releasing.md
docs/plans/: 20260308_fix_concurrently_argument_overflow.md
locks/jvm/: java17.lock.jsonc  java21.lock.jsonc
pants-plugins/: BUILD
pants-plugins/pants_backend_clojure/: clojure_symbol_mapping.py  compile_clj.py  config.py  dependency_inference.py  jvm_artifact_validation.py  namespace_analysis.py  provided_dependencies.py  register.py  target_types.py  tools_build_uberjar.py
pants-plugins/pants_backend_clojure/goals/: check.py  fmt.py  generate_deps.py  lint.py  package.py  repl.py  test.py
pants-plugins/pants_backend_clojure/subsystems/: __init__.py  clj_kondo.py  cljfmt.py  tools_build.py
pants-plugins/tests/: test_check.py  test_clj_fmt.py  test_clj_lint.py  test_clojure_infer_subsystem.py  test_clojure_symbol_mapping.py  test_dependency_inference.py  test_dependency_inference_integration.py  test_error_scenarios.py  test_extra_classpath_targets.py  test_generate_deps_edn.py  test_hang_repro.py  test_jar_analyzer.py  test_namespace_analysis.py  test_namespace_extraction.py  test_package_clojure_deploy_jar.py  test_provided_dependencies.py  test_repl.py  test_source_roots.py  test_target_types.py  test_test_runner.py  test_tools_build.py  test_tools_build_uberjar.py
projects/example/project-a/src/: BUILD
(+6 files in other folders)
