[project]
name = "pants-backend-clojure"
version = "0.1.0"
description = "A Clojure backend for the Pants build system"
authors = [
    { name = "Stephen Hopper", email = "stephenmhopper@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["pantsbuild", "pants", "clojure", "jvm", "build-system"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Repository = "https://github.com/enragedginger/pants-backend-clojure"
Documentation = "https://github.com/enragedginger/pants-backend-clojure#readme"
Issues = "https://github.com/enragedginger/pants-backend-clojure/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pants-plugins/pants_backend_clojure"]

[tool.hatch.build.targets.sdist]
include = [
    "pants-plugins/pants_backend_clojure/**/*.py",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"pants-plugins/tests/**" = ["F841"]
